<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="app_name_spotify">Spotify Streamer</string>

    <string name="action_settings">Settings</string>

    <!-- MainActivity String Resources -->
    <string name="str_my_nanodegree_apps">My Nanodegree Apps!</string>
    
    <string name="str_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="str_scores_app">SCORES APP</string>
    <string name="str_library_app">LIBRARY APP</string>
    <string name="str_build_it_bigger">BUILD IT BIGGER</string>
    <string name="str_xyz_reader">XYZ READER</string>
    <string name="str_capstone">CAPSTONE: MY APP</string>

    <string name="str_toast_spotify_streamer">This button will launch my Spotify Streamer App</string>
    <string name="str_toast_scores_app">This button will launch my Scores App</string>
    <string name="str_toast_library_app">This button will launch my Library App</string>
    <string name="str_toast_build_it_bigger">This button will launch my Build It Bigger App</string>
    <string name="str_toast_xyz_reader">This button will launch my XYZ Reader App</string>
    <string name="str_toast_capstone">This button will launch my CapStone App</string>
    <!-- MainActivity String Resources -->

    <!-- Spotify Streamer String Resources -->
    <string name="action_search">Search</string>
    <string name="str_hint_action_search">Search, default Artist: Nach</string>
    <string name="str_nach">Nach</string>
    <string name="str_no_artist_information">There is no information about</string>
    <!-- Spotify Streamer String Resources -->

    <!-- Row Spotify Streamer Item String Resources -->
    <string name="str_artist">Artist</string>
    <string name="str_album">Album</string>
    <!-- Row Spotify Streamer Item String Resources -->
</resources>
