<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/style_tv_nanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/dim_text_nanodegree_margin"
        android:text="@string/str_my_nanodegree_apps" />

    <Button
        style="@style/style_button_text"
        android:layout_width="@dimen/dim_button_app_width"
        android:layout_height="@dimen/dim_button_app_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dim_button_app_margin"
        android:background="@drawable/ripple_button_apps"
        android:onClick="onClickListenerSpotifyStreamer"
        android:text="@string/str_spotify_streamer" />

    <Button
        style="@style/style_button_text"
        android:layout_width="@dimen/dim_button_app_width"
        android:layout_height="@dimen/dim_button_app_height"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="@dimen/dim_button_app_margin"
        android:background="@drawable/ripple_button_apps"
        android:text="@string/str_scores_app"
        android:onClick="onClickListenerScoresApp"/>

    <Button
        style="@style/style_button_text"
        android:layout_width="@dimen/dim_button_app_width"
        android:layout_height="@dimen/dim_button_app_height"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="@dimen/dim_button_app_margin"
        android:background="@drawable/ripple_button_apps"
        android:text="@string/str_library_app"
        android:onClick="onClickListenerLibraryApp"/>

    <Button
        style="@style/style_button_text"
        android:layout_width="@dimen/dim_button_app_width"
        android:layout_height="@dimen/dim_button_app_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dim_button_app_margin"
        android:background="@drawable/ripple_button_apps"
        android:text="@string/str_build_it_bigger"
        android:onClick="onClickListenerBuildItBigger"/>

    <Button
        style="@style/style_button_text"
        android:layout_width="@dimen/dim_button_app_width"
        android:layout_height="@dimen/dim_button_app_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/dim_button_app_margin"
        android:background="@drawable/ripple_button_apps"
        android:text="@string/str_xyz_reader"
        android:onClick="onClickListenerXYZReader"/>

    <Button
        style="@style/style_button_text"
        android:layout_width="@dimen/dim_button_app_width"
        android:layout_height="@dimen/dim_button_app_height"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="@dimen/dim_button_app_margin"
        android:background="@drawable/ripple_button_my_apps"
        android:text="@string/str_capstone"
        android:onClick="onClickListenerCapStone"/>

</LinearLayout>
